--- a/VCModel.vcxproj
+++ b/VCModel.vcxproj
@@ -21,18 +21,22 @@
   <ItemGroup>
     <ClInclude Include="include\BinaryIO.h" />
     <ClInclude Include="include\meshbuffers.h" />
+    <ClInclude Include="src\common.h" />
     <ClInclude Include="src\databuffers.h" />
     <ClInclude Include="src\meshtags.h" />
     <ClInclude Include="src\modelfile.h" />
-    <ClInclude Include="src\vcmodel.h" />
+    <ClInclude Include="src\skinmodel.h" />
+    <ClInclude Include="src\skinmodelpoly.h" />
     <ClInclude Include="src\wavefront.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="include\BinaryIO.cpp" />
+    <ClCompile Include="src\common.cpp" />
     <ClCompile Include="src\databuffers.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\modelfile.cpp" />
-    <ClCompile Include="src\vcmodel.cpp" />
+    <ClCompile Include="src\skinmodel.cpp" />
+    <ClCompile Include="src\skinmodelpoly.cpp" />
     <ClCompile Include="src\wavefront.cpp" />
   </ItemGroup>
   <ItemGroup>
