--- a/VCModel.vcxproj
+++ b/VCModel.vcxproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <ClInclude Include="include\BinaryIO.h" />
     <ClInclude Include="include\meshbuffers.h" />
+    <ClInclude Include="meshshapes.h" />
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\databuffers.h" />
     <ClInclude Include="src\dll\framework.h" />
@@ -59,6 +60,7 @@
   <ItemGroup>
     <ClCompile Include="include\BinaryIO.cpp" />
     <ClCompile Include="include\meshbuffers.cpp" />
+    <ClCompile Include="meshshapes.cpp" />
     <ClCompile Include="src\common.cpp" />
     <ClCompile Include="src\databuffers.cpp" />
     <ClCompile Include="src\dll\dllmain.cpp" />
