--- a/VCModel.vcxproj
+++ b/VCModel.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug-EXE|Win32">
@@ -45,12 +45,13 @@
   <ItemGroup>
     <ClInclude Include="include\BinaryIO.h" />
     <ClInclude Include="include\meshbuffers.h" />
-    <ClInclude Include="meshshapes.h" />
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\databuffers.h" />
     <ClInclude Include="src\dll\framework.h" />
     <ClInclude Include="src\dll\interfaceskinmodel.h" />
+    <ClInclude Include="src\dll\interface_serialize.h" />
     <ClInclude Include="src\dll\pch.h" />
+    <ClInclude Include="src\meshshapes.h" />
     <ClInclude Include="src\meshtags.h" />
     <ClInclude Include="src\modelfile.h" />
     <ClInclude Include="src\skinmodel.h" />
@@ -60,13 +61,14 @@
   <ItemGroup>
     <ClCompile Include="include\BinaryIO.cpp" />
     <ClCompile Include="include\meshbuffers.cpp" />
-    <ClCompile Include="meshshapes.cpp" />
     <ClCompile Include="src\common.cpp" />
     <ClCompile Include="src\databuffers.cpp" />
     <ClCompile Include="src\dll\dllmain.cpp" />
     <ClCompile Include="src\dll\interfaceskinmodel.cpp" />
+    <ClCompile Include="src\dll\interface_serialize.cpp" />
     <ClCompile Include="src\dll\pch.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\meshshapes.cpp" />
     <ClCompile Include="src\modelfile.cpp" />
     <ClCompile Include="src\skinmodel.cpp" />
     <ClCompile Include="src\skinmodelpoly.cpp" />
